LIB-628 Add transparent footnote boorder: prevent potential 2px jump

--- a/custom/themes/lib_unb_ca/src/scss/overrides/_footnotes.scss
+++ b/custom/themes/lib_unb_ca/src/scss/overrides/_footnotes.scss
@@ -15,8 +15,12 @@ ul.footnotes {
   padding: 0 1px;
 }
 
-.see-footnote:target,
-.footnotes .footnote:target {
-  background-color: $gray-200;
-  border: 1px solid $gray-300;
+.see-footnote,
+.footnotes .footnote {
+  border: 1px solid transparent;
+
+  &:target {
+    background-color: $gray-200;
+    border: 1px solid $gray-300;
+  }
 }
